--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
             </header>
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Stanisław Wyspiański</td>
+                    <td>Rabindranth Tagore</td>
+                    <td>Bianka Rolando</td>
+                    <td>Józef Ignacy Kraszewski</td>
+                    <td>Bruno Jasieński</td>
                 </tr>
                 <tr>
                     <td></td>
@@ -64,3 +66,4 @@
     </footer>
 </body>
 </html>
+
